<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_md"
    tools:context=".ui.rescue.MatchingResultFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matching_title"
        android:textAppearance="@style/TextAppearance.AnimalLoo.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/matching_description"
        android:textAppearance="@style/TextAppearance.AnimalLoo.Caption"
        android:textColor="@color/color_text_secondary" />

    <TextView
        android:id="@+id/tv_submit_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:background="@color/color_primary_light"
        android:padding="@dimen/spacing_md"
        android:text="@string/lost_report_submit_success"
        android:textAppearance="@style/TextAppearance.AnimalLoo.Body"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_report"
        style="@style/Widget.AnimalLoo.Button.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lost_report_view_detail"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/matching_state_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_match_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_weight="1"
        android:visibility="gone"
        tools:listitem="@layout/item_match_result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry_matching"
        style="@style/Widget.AnimalLoo.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/matching_retry"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_to_report"
        style="@style/Widget.AnimalLoo.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/matching_back_to_report" />

</LinearLayout>
