<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.rescue.LostReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_report_title"
            android:textAppearance="@style/TextAppearance.AnimalLoo.Title" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_animal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_species"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_species">

            <AutoCompleteTextView
                android:id="@+id/actv_species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_breed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_breed">

            <AutoCompleteTextView
                android:id="@+id/actv_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_gender">

            <AutoCompleteTextView
                android:id="@+id/actv_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_region">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_lost_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_date"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_lost_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_features">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/lost_report_contact">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/lost_report_photo"
            android:textAppearance="@style/TextAppearance.AnimalLoo.Caption" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/spacing_sm">

            <ImageView
                android:id="@+id/iv_photo_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_card"
                android:contentDescription="@string/cd_animal_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/img_placeholder" />

            <View
                android:id="@+id/photo_preview_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/lost_report_select_photo"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground" />

            <TextView
                android:id="@+id/tv_photo_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lost_report_photo_hint"
                android:textAppearance="@style/TextAppearance.AnimalLoo.Caption"
                android:textColor="@color/color_text_secondary" />

        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_photo"
            style="@style/Widget.AnimalLoo.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm"
            android:text="@string/lost_report_select_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_report"
            style="@style/Widget.AnimalLoo.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:text="@string/lost_report_submit" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
