<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.map.MapFragment">

    <HorizontalScrollView
        android:id="@+id/chip_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/spacing_md"
        android:paddingVertical="@dimen/spacing_sm"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/map_category_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hospital"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_hospital" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_pharmacy"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_pharmacy" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shelter"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_shelter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_restaurant"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_restaurant" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cafe"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_cafe" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hotel"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_hotel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_tourism"
                style="@style/Widget.AnimalLoo.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_category_tourism" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll" />

    <LinearLayout
        android:id="@+id/layout_map_fallback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_map_fallback_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary_light"
            android:padding="@dimen/spacing_md"
            android:text="@string/map_no_api_key"
            android:textAppearance="@style/TextAppearance.AnimalLoo.Body"
            android:textColor="@color/color_text_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/map_view_list"
            android:textAppearance="@style/TextAppearance.AnimalLoo.Subtitle" />

        <FrameLayout
            android:id="@+id/fallback_state_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_sm" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_facility_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_weight="1"
            tools:listitem="@layout/item_facility" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/map_state_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>
