<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    android:padding="@dimen/spacing_md"
    tools:context=".ui.rescue.RescuedAnimalFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rescued_title"
        android:textAppearance="@style/TextAppearance.AnimalLoo.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rescued_filter_breed"
                android:textAppearance="@style/TextAppearance.AnimalLoo.Caption" />

            <Spinner
                android:id="@+id/spinner_filter_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_touch_target" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_sm"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rescued_filter_region"
                android:textAppearance="@style/TextAppearance.AnimalLoo.Caption" />

            <Spinner
                android:id="@+id/spinner_filter_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_touch_target" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm"
        android:text="@string/rescued_filter_gender"
        android:textAppearance="@style/TextAppearance.AnimalLoo.Caption" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xs"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_all"
            style="@style/Widget.AnimalLoo.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_male"
            style="@style/Widget.AnimalLoo.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_female"
            style="@style/Widget.AnimalLoo.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />

    </com.google.android.material.chip.ChipGroup>

    <FrameLayout
        android:id="@+id/rescued_state_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_sm" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rescued_animals"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_sm"
        android:layout_weight="1"
        android:visibility="gone"
        tools:listitem="@layout/item_rescued_animal" />

</LinearLayout>
